--- a/config/github.yml
+++ b/config/github.yml
@@ -1,7 +1,7 @@
 # GitHub 功能配置
 github:
   # GitHub 仓库信息
-  repository: imjiaoyuan/RSS    # 仓库地址 username/repo
+  repository: cky2005/RSS    # 仓库地址 username/repo
   
   # 评论功能
   comment:
